--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -99,7 +99,7 @@ body {
       .heading-primary--sub {
         font-family: .5rem; } }
 
-.heading-secondary {
+.heading-secondary, .heading-secondary--alt {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
@@ -110,14 +110,16 @@ body {
   letter-spacing: .2rem;
   transition: all .2s; }
   @media only screen and (max-width: 56.25em) {
-    .heading-secondary {
+    .heading-secondary, .heading-secondary--alt {
       font-size: 3rem; } }
   @media only screen and (max-width: 37.5em) {
-    .heading-secondary {
+    .heading-secondary, .heading-secondary--alt {
       font-size: 2.5rem; } }
-  .heading-secondary:hover {
+  .heading-secondary:hover, .heading-secondary--alt:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .heading-secondary--alt {
+    background-image: linear-gradient(to right, #f7f7f7, #999); }
 
 .heading-tertiary {
   font-size: 1.6rem;
@@ -245,15 +247,14 @@ body {
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 52rem; }
+  height: 100vh; }
   .card__side {
-    height: 52rem;
+    height: auto;
     transition: all .8s ease;
     font-size: 2rem;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: .3rem;
@@ -262,17 +263,14 @@ body {
     .card__side--front {
       background-color: #fff; }
     .card__side--back {
-      transform: rotateY(180deg); }
+      transform: rotateY(180deg);
+      background-color: white; }
       .card__side--back-1 {
         background-image: linear-gradient(to right bottom, #e67474, #e23030); }
       .card__side--back-2 {
         background-image: linear-gradient(to right bottom, #70c2e2, #10536d); }
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #33eca5, #138a5c); }
-  .card:hover .card__side--front {
-    transform: rotateY(-180deg); }
-  .card:hover .card__side--back {
-    transform: rotateY(0); }
   .card__picture {
     background-size: cover;
     height: 23rem;
@@ -657,19 +655,18 @@ body {
 
 .circle {
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 2.5rem;
-  border-radius: .3rem;
+  padding: .5rem;
+  border-radius: 50%;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
   @media only screen and (max-width: 56.25em) {
     .circle {
       padding: 2rem; } }
   .circle__img {
-    margin-bottom: .5rem;
     display: inline-block;
     max-width: 100% !important;
-    max-height: 100%;
-    border-radius: 50%; }
+    max-height: auto;
+    border-radius: inherit; }
     @media only screen and (max-width: 56.25em) {
       .circle__img {
         margin-bottom: 0; } }
@@ -794,10 +791,17 @@ body {
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .header__logo-box {
     position: absolute;
-    top: 4rem;
-    left: 4rem; }
+    top: 1rem;
+    left: 2rem;
+    height: 8rem;
+    transition: transform .3s; }
+    .header__logo-box:hover {
+      cursor: pointer;
+      transform: scale(1.3); }
   .header__logo {
-    height: 3.5rem; }
+    height: inherit;
+    font-size: 6rem;
+    color: #fff; }
   .header__text-box {
     position: absolute;
     text-align: center;
@@ -874,7 +878,7 @@ body {
   display: inline-block;
   font-size: 3rem;
   font-weight: 300;
-  padding: 1rem 2rem;
+  padding: 1rem 5rem;
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
@@ -941,21 +945,42 @@ body {
     .section-about {
       padding: 20rem 0; } }
 
-.section-portfolio {
+.section-portfolio, .section-portfolio--2d, .section-portfolio--3d {
   padding: 30rem 5rem 20rem;
   background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/nat-4.jpg);
   background-size: cover;
   margin-top: -20rem;
   margin-bottom: 0rem; }
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-    .section-portfolio {
-      -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
-      clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+    .section-portfolio, .section-portfolio--2d, .section-portfolio--3d {
+      -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
+      clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
       height: 100%; } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
-    .section-portfolio {
+    .section-portfolio, .section-portfolio--2d, .section-portfolio--3d {
       background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile-cropped.jpg); } }
   @media only screen and (max-width: 37.5em) {
-    .section-portfolio {
+    .section-portfolio, .section-portfolio--2d, .section-portfolio--3d {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
+  .section-portfolio--3d {
+    padding: 18rem 5rem 10rem; }
+    @media only screen and (max-width: 37.5em) {
+      .section-portfolio--3d {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); } }
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      .section-portfolio--3d {
+        -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+        height: 100%; } }
+  .section-portfolio--unity {
+    position: relative;
+    padding: 25rem 1rem 20rem;
+    text-align: center;
+    margin-top: -20rem; }
+    @media only screen and (max-width: 56.25em) {
+      .section-portfolio--unity {
+        padding: 20rem 0; } }
+    .section-portfolio--unity__video {
+      margin: 5rem auto; }
