--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -35,11 +35,20 @@
 
     &__logo-box {
         position: absolute;
-        top: 4rem;
-        left: 4rem;
+        top: 1rem;
+        left: 2rem;
+        height: 8rem;
+        transition: transform .3s;
+        
+        &:hover {
+            cursor: pointer;
+            transform: scale(1.3);
+        }
     }
     &__logo {
-        height: 3.5rem;
+        height: inherit;
+        font-size: 6rem;
+        color: $color-white;
     }
     &__text-box {
         position: absolute;
