--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -22,8 +22,8 @@
 
 
     @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-        -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
-        clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+        -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
         height: 100%;
     }
 
@@ -41,13 +41,35 @@
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
     }
-}
 
-// .section-stories {
-//     position: relative;
-//     padding: 15rem 0;
-    
-//     @include respond (tab-port) {
-//         padding: 10rem 0;
-//     }
-// }
+    &--2d {
+        @extend .section-portfolio;
+    }
+    &--3d {
+        @extend .section-portfolio;
+        padding: 18rem 5rem 10rem;
+
+        @include respond(phone) {
+            -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        }
+        @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+            -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+            height: 100%;
+        }
+    }
+    &--unity {
+        position: relative;
+        padding: 25rem 1rem 20rem;
+        text-align: center;
+        margin-top: -20rem;
+
+        @include respond (tab-port) {
+            padding: 20rem 0;
+        }
+        &__video {
+            margin: 5rem auto;
+        }
+    }
+}
