Two profiles initial set up

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -40,6 +40,10 @@
         height: 8rem;
         transition: transform .3s;
         
+        a:link, a:visited, a:active {
+            text-decoration: none;
+        }
+
         &:hover {
             cursor: pointer;
             transform: scale(1.3);
