--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -689,123 +689,35 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
 
+.hide {
+  transition: all .8s ease;
+  transform: rotateY(180deg);
+  display: none; }
+
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
-  position: relative;
+  position: absolute;
+  position: 0 0;
   height: 100vh; }
   .card__side {
     height: auto;
     transition: all .8s ease;
-    font-size: 2rem;
     position: absolute;
     top: 0;
     left: 0;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    border-radius: .3rem;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
     overflow: hidden; }
-    .card__side--front {
-      background-color: #fff; }
-    .card__side--back {
-      transform: rotateY(180deg);
-      background-color: white; }
-      .card__side--back-1 {
-        background-image: linear-gradient(to right bottom, #e67474, #e23030); }
-      .card__side--back-2 {
-        background-image: linear-gradient(to right bottom, #70c2e2, #10536d); }
-      .card__side--back-3 {
-        background-image: linear-gradient(to right bottom, #33eca5, #138a5c); }
-  .card__picture {
-    background-size: cover;
-    height: 23rem;
-    background-blend-mode: screen;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    border-top-left-radius: .3rem;
-    border-top-right-radius: .3rem; }
-    .card__picture--1 {
-      background-image: linear-gradient(to right bottom, #e67474, #e23030), url(../img/nat-5.jpg); }
-    .card__picture--2 {
-      background-image: linear-gradient(to right bottom, #70c2e2, #10536d), url(../img/nat-6.jpg); }
-    .card__picture--3 {
-      background-image: linear-gradient(to right bottom, #33eca5, #138a5c), url(../img/nat-7.jpg); }
-  .card__heading {
-    font-size: 2.8rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    text-align: right;
-    color: #fff;
-    position: absolute;
-    top: 12rem;
-    right: 2rem;
-    width: 75%; }
-  .card__heading-span {
-    padding: 1rem 1.5rem;
-    -webkit-box-decoration-break: clone;
-    box-decoration-break: clone; }
-    .card__heading-span--1 {
-      background-image: linear-gradient(to right bottom, rgba(230, 116, 116, 0.85), rgba(226, 48, 48, 0.85)); }
-    .card__heading-span--2 {
-      background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.85), rgba(16, 83, 109, 0.85)); }
-    .card__heading-span--3 {
-      background-image: linear-gradient(to right bottom, rgba(51, 236, 165, 0.85), rgba(19, 138, 92, 0.85)); }
-  .card__details ul {
-    list-style: none;
-    width: 80%;
-    margin: 0 auto; }
-    .card__details ul li {
-      text-align: center;
-      font-size: 1.5rem;
-      padding: 1rem; }
-      .card__details ul li:not(:last-child) {
-        border-bottom: 1px solid #eee; }
-  .card__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
-    text-align: center; }
-  .card__price-box {
-    text-align: center;
-    color: #fff;
-    margin-bottom: 8rem; }
-  .card__price-only {
-    font-size: 1.4rem;
-    text-transform: uppercase; }
-  .card__price-value {
-    font-size: 6rem;
-    font-weight: 100; }
-  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
-    .card {
-      height: auto;
-      border-radius: .3rem;
-      background-color: #fff;
-      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
-      .card__side {
-        height: auto;
-        position: relative;
-        box-shadow: none; }
-        .card__side--back {
-          transform: rotateY(0);
-          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
-      .card:hover .card__side--front {
-        transform: rotateY(0); }
-      .card__details {
-        padding: 1rem 3rem; }
-      .card__cta {
-        position: relative;
-        top: 0;
-        left: 0;
-        transform: translate(0);
-        width: 100%;
-        padding: 7rem 4rem 4rem 4rem; }
-      .card__price-box {
-        margin-bottom: 3rem; }
-      .card__price-value {
-        font-size: 4rem; } }
+    .card__side--front i {
+      color: red; }
+    .card__side--back i {
+      color: blue; }
+    .card__side--back .header {
+      background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile3.jpg); }
+      @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
+        .card__side--back .header {
+          background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile3.jpg); } }
 
 .composition {
   position: relative; }
@@ -1241,6 +1153,8 @@ body {
     left: 2rem;
     height: 8rem;
     transition: transform .3s; }
+    .header__logo-box a:link, .header__logo-box a:visited, .header__logo-box a:active {
+      text-decoration: none; }
     .header__logo-box:hover {
       cursor: pointer;
       transform: scale(1.3); }
