--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,3 +1,9 @@
+
+.hide {
+    transition: all .8s ease;
+    transform: rotateY(180deg);
+    display: none;    
+}
 .card {
     perspective: 150rem;
     -moz-perspective: 150rem;
@@ -5,39 +11,56 @@
     height: 100vh; //give same height as __side or perspective doesn't work; height collapses
 
     &__side {
+        @extend .card;
         height: auto;
         transition: all .8s ease;
-        font-size: 2rem;
+        // font-size: 2rem;
         position: absolute;
         top: 0;
         left: 0;
-        // width: 90vw;
+        width:100%;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-        border-radius: .3rem;
+        // border-radius: .3rem;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         overflow: hidden;
-
         &--front {
-            background-color: $color-white;
+            @extend .card__side;
+            i {
+                color: red;
+            }
         }
         &--back {
-            transform: rotateY(180deg);
-            background-color: white;
+            @extend .card__side;
+            i {
+                color: blue;
+            }
+            .header {
+                background-image:linear-gradient(
+                    to right bottom, 
+                    rgba($color-primary-light,.8),
+                    rgba($color-primary-dark,.8)),
+                url(../img/profile3.jpg);
 
-            &-1 {
-                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
-            }
-            &-2 {
-                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
-            }
-            &-3 {
-                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+                @media  only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+                only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), // safari 
+                only screen and (min-width: 125em) { // dots per inch; ',' is an 'or'
+                background-image:linear-gradient(
+                    to right bottom, 
+                    rgba($color-primary-light,.8),
+                    rgba($color-primary-dark,.8)),
+                url(../img/profile3.jpg);
+                } 
             }
         }
+        // &:active {
+        //     transition: all .8s ease;
+        //     transform: rotateY(180deg);
+        //     display: none;
+        // }
     }
 
-    // &:hover &__side--front {
+    // &:active &__side--front {
     //     transform: rotateY(-180deg);
     // }
     // &:hover &__side--back {
@@ -45,152 +68,152 @@
     // }
 
     //FRONT SIDE STYLING
-    &__picture {
-        background-size: cover;
-        height: 23rem;
-        background-blend-mode: screen;
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); // for different browsers
-        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-        border-top-left-radius: .3rem;
-        border-top-right-radius: .3rem;
+    // &__picture {
+    //     background-size: cover;
+    //     height: 23rem;
+    //     background-blend-mode: screen;
+    //     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); // for different browsers
+    //     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    //     border-top-left-radius: .3rem;
+    //     border-top-right-radius: .3rem;
 
-        &--1 {
-            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), // relative to css not scss location
-            url(../img/nat-5.jpg);
-        }
-        &--2 {
-            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), // relative to css not scss location
-            url(../img/nat-6.jpg);
-        }
-        &--3 {
-            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), // relative to css not scss location
-            url(../img/nat-7.jpg);
-        }
-    }
+    //     &--1 {
+    //         background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), // relative to css not scss location
+    //         url(../img/nat-5.jpg);
+    //     }
+    //     &--2 {
+    //         background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), // relative to css not scss location
+    //         url(../img/nat-6.jpg);
+    //     }
+    //     &--3 {
+    //         background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), // relative to css not scss location
+    //         url(../img/nat-7.jpg);
+    //     }
+    // }
 
-    &__heading {
-        font-size: 2.8rem;
-        font-weight: 300;
-        text-transform: uppercase;
-        text-align: right;
-        color: $color-white;
-        position: absolute;
-        top: 12rem;
-        right: 2rem;
-        width: 75%;
-    }
+    // &__heading {
+    //     font-size: 2.8rem;
+    //     font-weight: 300;
+    //     text-transform: uppercase;
+    //     text-align: right;
+    //     color: $color-white;
+    //     position: absolute;
+    //     top: 12rem;
+    //     right: 2rem;
+    //     width: 75%;
+    // }
 
-    &__heading-span {
-        padding: 1rem 1.5rem;
-        -webkit-box-decoration-break: clone; // apply all decorations in selector to boxes created
-        box-decoration-break: clone;
-        &--1 {
-            background-image: linear-gradient(to right bottom,
-                rgba($color-secondary-light, .85),
-                rgba($color-secondary-dark, .85));
-        }
-        &--2 {
-            background-image: linear-gradient(to right bottom,
-                rgba($color-primary-light, .85),
-                rgba($color-primary-dark, .85));
-        }
-        &--3 {
-            background-image: linear-gradient(to right bottom,
-                rgba($color-tertiary-light, .85),
-                rgba($color-tertiary-dark, .85));
-        }
-    }
+    // &__heading-span {
+    //     padding: 1rem 1.5rem;
+    //     -webkit-box-decoration-break: clone; // apply all decorations in selector to boxes created
+    //     box-decoration-break: clone;
+    //     &--1 {
+    //         background-image: linear-gradient(to right bottom,
+    //             rgba($color-secondary-light, .85),
+    //             rgba($color-secondary-dark, .85));
+    //     }
+    //     &--2 {
+    //         background-image: linear-gradient(to right bottom,
+    //             rgba($color-primary-light, .85),
+    //             rgba($color-primary-dark, .85));
+    //     }
+    //     &--3 {
+    //         background-image: linear-gradient(to right bottom,
+    //             rgba($color-tertiary-light, .85),
+    //             rgba($color-tertiary-dark, .85));
+    //     }
+    // }
 
-    &__details {
-        ul {
-            list-style: none;
-            width: 80%;
-            margin: 0 auto;
+    // &__details {
+    //     ul {
+    //         list-style: none;
+    //         width: 80%;
+    //         margin: 0 auto;
 
-            li {
-                text-align: center;
-                font-size: 1.5rem;
-                padding: 1rem;
+    //         li {
+    //             text-align: center;
+    //             font-size: 1.5rem;
+    //             padding: 1rem;
 
-                &:not(:last-child) {
-                    border-bottom: 1px solid $color-gray-light-2;
-                }
-            }
-        }
-    }
+    //             &:not(:last-child) {
+    //                 border-bottom: 1px solid $color-gray-light-2;
+    //             }
+    //         }
+    //     }
+    // }
 
-    // FRONT SIDE STYLING
-    &__cta {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 90%;
-        text-align: center;
-    }
+    // // FRONT SIDE STYLING
+    // &__cta {
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 50%;
+    //     transform: translate(-50%, -50%);
+    //     width: 90%;
+    //     text-align: center;
+    // }
 
-    &__price-box {
-        text-align: center;
-        color: $color-white;
-        margin-bottom: 8rem;
-    }
+    // &__price-box {
+    //     text-align: center;
+    //     color: $color-white;
+    //     margin-bottom: 8rem;
+    // }
 
-    &__price-only {
-        font-size: 1.4rem;
-        text-transform: uppercase;
-    }
+    // &__price-only {
+    //     font-size: 1.4rem;
+    //     text-transform: uppercase;
+    // }
 
-    &__price-value {
-        font-size: 6rem;
-        font-weight: 100;
-    }
+    // &__price-value {
+    //     font-size: 6rem;
+    //     font-weight: 100;
+    // }
 
 
 
-    // MEDIA QUERY 
-    // @include respond(tab-port) {
-    @media only screen and (max-width: 56.25em),
-            only screen and (hover:none) {
-        height: auto;
-        border-radius: .3rem;
-        background-color: $color-white;
-        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+    // // MEDIA QUERY 
+    // // @include respond(tab-port) {
+    // @media only screen and (max-width: 56.25em),
+    //         only screen and (hover:none) {
+    //     height: auto;
+    //     border-radius: .3rem;
+    //     background-color: $color-white;
+    //     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
-        &__side {
-            height: auto;
-            position: relative;
-            box-shadow: none;
+    //     &__side {
+    //         height: auto;
+    //         position: relative;
+    //         box-shadow: none;
 
-            &--back {
-                transform: rotateY(0);
-                clip-path: polygon(0 15%,100% 0,100% 100%, 0 100%);
-            }
-        }
+    //         &--back {
+    //             transform: rotateY(0);
+    //             clip-path: polygon(0 15%,100% 0,100% 100%, 0 100%);
+    //         }
+    //     }
 
-        &:hover &__side--front {
-            transform: rotateY(0);
-        }
+    //     &:hover &__side--front {
+    //         transform: rotateY(0);
+    //     }
 
-        &__details {
-            padding: 1rem 3rem;
-        }
+    //     &__details {
+    //         padding: 1rem 3rem;
+    //     }
 
-        // FRONT SIDE STYLING
-        &__cta {
-            position: relative;
-            top: 0;
-            left: 0;
-            transform: translate(0);
-            width: 100%;
-            padding: 7rem 4rem 4rem 4rem;
-        }
+    //     // FRONT SIDE STYLING
+    //     &__cta {
+    //         position: relative;
+    //         top: 0;
+    //         left: 0;
+    //         transform: translate(0);
+    //         width: 100%;
+    //         padding: 7rem 4rem 4rem 4rem;
+    //     }
 
-        &__price-box {
-            margin-bottom: 3rem;
-        }
+    //     &__price-box {
+    //         margin-bottom: 3rem;
+    //     }
 
-        &__price-value {
-            font-size: 4rem;
-        }
-    }
+    //     &__price-value {
+    //         font-size: 4rem;
+    //     }
+    // }
 }
