--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -104,7 +104,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, #70c2e2, #10536d);
+  background-image: linear-gradient(to right, #333, #000);
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: .2rem;
@@ -121,10 +121,24 @@ body {
   .heading-secondary--alt {
     background-image: linear-gradient(to right, #f7f7f7, #999); }
 
-.heading-tertiary {
-  font-size: 1.6rem;
-  font-weight: 700;
-  text-transform: uppercase; }
+.heading-tertiary, .heading-tertiary a {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  display: block;
+  background-image: linear-gradient(to right, #f7f7f7, #999);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .heading-tertiary a {
+    text-decoration: none; }
+  @media only screen and (max-width: 56.25em) {
+    .heading-tertiary, .heading-tertiary a {
+      font-size: 3rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .heading-tertiary, .heading-tertiary a {
+      font-size: 2.5rem; } }
 
 .paragraph {
   font-size: 1.6rem; }
@@ -248,20 +262,21 @@ body {
   transform: rotateY(180deg);
   display: none; }
 
-.card {
+.card, .card__side, .card__side--front, .card__side--back {
   perspective: 150rem;
   -moz-perspective: 150rem;
-  position: absolute;
-  position: 0 0;
+  position: relative;
   height: 100vh; }
-  .card__side {
+  .card__side, .card__side--front, .card__side--back {
     height: auto;
     transition: all .8s ease;
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
     overflow: hidden; }
     .card__side--front i {
       color: red; }
@@ -859,35 +874,44 @@ body {
     .section-about {
       padding: 20rem 0; } }
 
-.section-portfolio, .section-portfolio--2d, .section-portfolio--3d {
+.section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
   padding: 30rem 5rem 20rem;
   background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/nat-4.jpg);
   background-size: cover;
   margin-top: -20rem;
   margin-bottom: 0rem; }
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-    .section-portfolio, .section-portfolio--2d, .section-portfolio--3d {
+    .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
       -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
       clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
       height: 100%; } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
-    .section-portfolio, .section-portfolio--2d, .section-portfolio--3d {
+    .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
       background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile-cropped.jpg); } }
   @media only screen and (max-width: 37.5em) {
-    .section-portfolio, .section-portfolio--2d, .section-portfolio--3d {
+    .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
   .section-portfolio--3d {
-    padding: 18rem 5rem 10rem; }
-    @media only screen and (max-width: 37.5em) {
+    position: relative;
+    padding: 25rem 1rem 20rem;
+    text-align: center;
+    margin-top: -20rem; }
+    @media only screen and (max-width: 56.25em) {
       .section-portfolio--3d {
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); } }
-    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-      .section-portfolio--3d {
-        -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
-        clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
-        height: 100%; } }
+        padding: 20rem 0; } }
+    .section-portfolio--3d__video {
+      margin: 5rem auto; }
+  .section-portfolio--web {
+    position: relative;
+    padding: 25rem 1rem 20rem;
+    text-align: center;
+    margin-top: -20rem; }
+    @media only screen and (max-width: 56.25em) {
+      .section-portfolio--web {
+        padding: 20rem 0; } }
+    .section-portfolio--web__video {
+      margin: 5rem auto; }
   .section-portfolio--unity {
     position: relative;
     padding: 25rem 1rem 20rem;
@@ -898,3 +922,17 @@ body {
         padding: 20rem 0; } }
     .section-portfolio--unity__video {
       margin: 5rem auto; }
+  .section-portfolio--more {
+    text-align: center; }
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+      .section-portfolio--more {
+        -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+        height: 100%; } }
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
+      .section-portfolio--more {
+        background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile-cropped.jpg); } }
+    @media only screen and (max-width: 37.5em) {
+      .section-portfolio--more {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); } }
