--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -44,7 +44,7 @@ body {
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block;
-    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    background-image: linear-gradient(to right, $color-gray-dark-3, $color-black);
     -webkit-background-clip: text; // clip background to text (gradient on text not in background)
     color: transparent;
     letter-spacing: .2rem;
@@ -69,9 +69,27 @@ body {
 }
 
 .heading-tertiary {
-    font-size: 1.6rem;
-    font-weight: 700;
+    font-size: 2.5rem;
     text-transform: uppercase;
+    font-weight: 400;
+    display: block;
+    background-image: linear-gradient(to right, $color-gray-light-1, $color-gray-dark-2);
+    -webkit-background-clip: text; // clip background to text (gradient on text not in background)
+    color: transparent;
+    letter-spacing: .2rem;
+    transition: all .2s;
+
+    & a {
+        @extend .heading-tertiary;
+        text-decoration: none;
+    }
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
 }
 
 .paragraph {
