--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -46,17 +46,30 @@
         @extend .section-portfolio;
     }
     &--3d {
-        @extend .section-portfolio;
-        padding: 18rem 5rem 10rem;
+        position: relative;
+        padding: 25rem 1rem 20rem;
+        text-align: center;
+        margin-top: -20rem;
 
-        @include respond(phone) {
-            -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        @include respond (tab-port) {
+            padding: 20rem 0;
         }
-        @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-            -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
-            clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
-            height: 100%;
+        &__video {
+            margin: 5rem auto;
+        }
+    }
+    &--web {
+        @extend .section-portfolio;
+        position: relative;
+        padding: 25rem 1rem 20rem;
+        text-align: center;
+        margin-top: -20rem;
+
+        @include respond (tab-port) {
+            padding: 20rem 0;
+        }
+        &__video {
+            margin: 5rem auto;
         }
     }
     &--unity {
@@ -70,6 +83,30 @@
         }
         &__video {
             margin: 5rem auto;
+        }
+    }
+    &--more {
+        @extend .section-portfolio;
+        text-align: center;
+        @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+            -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+            height: 100%;
+        }
+    
+        @media  only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+                only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), // safari 
+                only screen and (min-width: 125em) { // dots per inch; ',' is an 'or'
+            background-image:linear-gradient(
+                to right bottom, 
+                rgba($color-primary-light,.8),
+                rgba($color-primary-dark,.8)),
+            url(../img/profile-cropped.jpg);
+        } 
+    
+        @include respond(phone) {
+            -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
         }
     }
 }
