--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -104,7 +104,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, #333, #000);
+  background-image: linear-gradient(to right, #1c95c5, #10536d);
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: .2rem;
@@ -121,7 +121,7 @@ body {
   .heading-secondary--alt {
     background-image: linear-gradient(to right, #f7f7f7, #999); }
 
-.heading-tertiary, .heading-tertiary a {
+.heading-tertiary, .heading-tertiary--alt, .heading-tertiary--alt a, .heading-tertiary a {
   font-size: 2.5rem;
   text-transform: uppercase;
   font-weight: 400;
@@ -131,13 +131,17 @@ body {
   color: transparent;
   letter-spacing: .2rem;
   transition: all .2s; }
-  .heading-tertiary a {
+  .heading-tertiary--alt, .heading-tertiary--alt a {
+    background-image: linear-gradient(to right, #333, #000); }
+    .heading-tertiary--alt a {
+      text-decoration: none; }
+  .heading-tertiary a, .heading-tertiary--alt a {
     text-decoration: none; }
   @media only screen and (max-width: 56.25em) {
-    .heading-tertiary, .heading-tertiary a {
+    .heading-tertiary, .heading-tertiary--alt, .heading-tertiary--alt a, .heading-tertiary a {
       font-size: 3rem; } }
   @media only screen and (max-width: 37.5em) {
-    .heading-tertiary, .heading-tertiary a {
+    .heading-tertiary, .heading-tertiary--alt, .heading-tertiary--alt a, .heading-tertiary a {
       font-size: 2.5rem; } }
 
 .paragraph {
@@ -278,15 +282,11 @@ body {
     backface-visibility: hidden;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
     overflow: hidden; }
-    .card__side--front i {
-      color: red; }
-    .card__side--back i {
-      color: blue; }
     .card__side--back .header {
-      background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile3.jpg); }
+      background-image: linear-gradient(to right bottom, rgba(127, 156, 236, 0.8), rgba(44, 72, 231, 0.8)), url(../img/david_painting_BW.jpg); }
       @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
         .card__side--back .header {
-          background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile3.jpg); } }
+          background-image: linear-gradient(to right bottom, rgba(127, 156, 236, 0.8), rgba(44, 72, 231, 0.8)), url(../img/david_painting_BW.jpg); } }
 
 .composition {
   position: relative; }
@@ -382,7 +382,7 @@ body {
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
     border-bottom: 0.3rem solid #1c95c5; }
   .form__input:focus:invalid {
-    border-bottom: 0.3rem solid #e23030; }
+    border-bottom: 0.3rem solid #2c48e7; }
   .form__input::-webkit-input-placeholder {
     color: #999; }
 
@@ -698,12 +698,20 @@ body {
 /* add color gradient and overlay to image; create shape with clip path polygon */
 .header {
   height: 85vh;
-  background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile-cropped.jpg);
+  background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile3.jpg);
   background-size: cover;
   background-position: top;
   background-attachment: fixed;
   background-repeat: no-repeat;
   position: relative; }
+  .header__art {
+    height: 85vh;
+    background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/david-painting-BW.jpg);
+    background-size: cover;
+    background-position: top;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    position: relative; }
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
@@ -711,7 +719,7 @@ body {
       height: 95vh; } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
-      background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile-cropped.jpg); } }
+      background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile3.jpg); } }
   @media only screen and (max-width: 37.5em) {
     .header {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
@@ -738,6 +746,22 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     /* relative to element */ }
+    .header__text-box > .heading-primary--sub {
+      display: block; }
+    .header__text-box > #currentProfile, .header__text-box #otherProfile, .header__text-box #otherProfile--dev {
+      display: inline-block; }
+
+#otherProfile {
+  transition: all .8s; }
+  #otherProfile:hover {
+    cursor: pointer;
+    transform: scale(1.5) translateY(-0.4rem) translateX(1.2rem); }
+
+#otherProfile--dev {
+  transition: all .8s; }
+  #otherProfile--dev:hover {
+    cursor: pointer;
+    transform: scale(1.6) translateY(-0.3rem) translateX(-4.2rem); }
 
 .navigation__checkbox {
   display: none; }
@@ -892,6 +916,8 @@ body {
     .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
+  .section-portfolio--2d {
+    background-image: linear-gradient(to right bottom, rgba(127, 156, 236, 0.8), rgba(44, 72, 231, 0.8)), url(../img/nat-4.jpg); }
   .section-portfolio--3d {
     position: relative;
     padding: 25rem 1rem 20rem;
@@ -936,3 +962,5 @@ body {
       .section-portfolio--more {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); } }
+    .section-portfolio--more-items {
+      padding: 0 43%; }
