--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -3,8 +3,9 @@ $color-primary: #1c95c5;
 $color-primary-light: #70c2e2;
 $color-primary-dark: #10536d;
 
-$color-secondary-light: #e67474;
-$color-secondary-dark: #e23030;
+$color-secondary:#4562e4;
+$color-secondary-light: #7f9cec;
+$color-secondary-dark: #2c48e7;
 
 $color-tertiary-light: #33eca5;
 $color-tertiary-dark: #138a5c;
