--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -44,7 +44,7 @@ body {
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block;
-    background-image: linear-gradient(to right, $color-gray-dark-3, $color-black);
+    background-image: linear-gradient(to right, $color-primary, $color-primary-dark);
     -webkit-background-clip: text; // clip background to text (gradient on text not in background)
     color: transparent;
     letter-spacing: .2rem;
@@ -78,6 +78,15 @@ body {
     color: transparent;
     letter-spacing: .2rem;
     transition: all .2s;
+
+    &--alt {
+        @extend .heading-tertiary;
+        & a {
+            @extend .heading-tertiary--alt;
+            text-decoration: none;
+        }
+        background-image: linear-gradient(to right, $color-gray-dark-3, $color-black);
+    }
 
     & a {
         @extend .heading-tertiary;
