--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,12 +5,26 @@
         to right bottom, 
         rgba($color-primary-light,.8),
         rgba($color-primary-dark,.8)),
-    url(../img/profile-cropped.jpg);
+    url(../img/profile3.jpg);
     background-size: cover;
     background-position: top;
     background-attachment: fixed;
     background-repeat: no-repeat;
     position: relative;
+
+    &__art {
+        height:85vh;
+        background-image:linear-gradient(
+            to right bottom, 
+            rgba($color-primary-light,.8),
+            rgba($color-primary-dark,.8)),
+        url(../img/david-painting-BW.jpg);
+        background-size: cover;
+        background-position: top;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        position: relative;        
+    }
 
     @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
@@ -25,7 +39,7 @@
             to right bottom, 
             rgba($color-primary-light,.8),
             rgba($color-primary-dark,.8)),
-        url(../img/profile-cropped.jpg);
+        url(../img/profile3.jpg);
     } 
 
     @include respond(phone) {
@@ -60,5 +74,27 @@
         top: 40%;
         left: 50%;
         transform: translate(-50%, -50%); /* relative to element */
+
+        & > .heading-primary--sub {
+            display: block;
+        }
+        & > #currentProfile, #otherProfile, #otherProfile--dev {
+            display: inline-block;
+        }
+    }
+}
+#otherProfile {
+    transition: all .8s;
+
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.5) translateY(-.4rem) translateX(1.2rem);
+    }
+}
+#otherProfile--dev {
+    transition: all .8s;
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.6) translateY(-.3rem) translateX(-4.2rem);
     }
 }
