--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -44,6 +44,11 @@
 
     &--2d {
         @extend .section-portfolio;
+        background-image:linear-gradient(
+            to right bottom, 
+            rgba($color-secondary-light,.8),
+            rgba($color-secondary-dark,.8)),
+        url(../img/nat-4.jpg);
     }
     &--3d {
         position: relative;
@@ -107,6 +112,9 @@
         @include respond(phone) {
             -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
             clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        }
+        &-items {
+            padding: 0 43%;
         }
     }
 }
