adjusted device scaling. Need to adjust respond mixin for tab-land and other minor changes

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -65,6 +65,9 @@ body {
     &--alt {
         @extend .heading-secondary;
         background-image: linear-gradient(to right, $color-gray-light-1, $color-gray-dark-2);
+        @include respond(phone) {
+            display:block;
+        }
     }
 }
 
