--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -27,8 +27,8 @@
     }
 
     @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
         height: 95vh;
     }
 
@@ -41,10 +41,13 @@
             rgba($color-primary-dark,.8)),
         url(../img/profile3.jpg);
     } 
-
+    @include respond(tab-port) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    }
     @include respond(phone) {
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
     }
 
     &__logo-box {
@@ -80,12 +83,17 @@
         }
         & > #currentProfile, #otherProfile, #otherProfile--dev {
             display: inline-block;
+            @include respond(tab-port) {
+                display: block;
+            }
+            @include respond(phone) {
+                display: block;
+            }
         }
     }
 }
 #otherProfile {
     transition: all .8s;
-
     &:hover {
         cursor: pointer;
         transform: scale(1.5) translateY(-.4rem) translateX(1.2rem);
