--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -494,7 +494,7 @@ html {
   @media only screen and (max-width: 75em) {
     html {
       font-size: 56.25%; } }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     html {
       font-size: 50%; } }
   @media only screen and (min-width: 112.5em) {
@@ -504,7 +504,7 @@ html {
 body {
   box-sizing: border-box;
   padding: 3rem; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     body {
       padding: 0; } }
 
@@ -555,7 +555,7 @@ body {
   color: transparent;
   letter-spacing: .2rem;
   transition: all .2s; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .heading-secondary, .heading-secondary--alt {
       font-size: 3rem; } }
   @media only screen and (max-width: 37.5em) {
@@ -566,6 +566,9 @@ body {
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
   .heading-secondary--alt {
     background-image: linear-gradient(to right, #f7f7f7, #999); }
+    @media only screen and (max-width: 37.5em) {
+      .heading-secondary--alt {
+        display: block; } }
 
 .heading-tertiary, .heading-tertiary--alt, .heading-tertiary--alt a, .heading-tertiary a {
   font-size: 2.5rem;
@@ -583,7 +586,7 @@ body {
       text-decoration: none; }
   .heading-tertiary a, .heading-tertiary--alt a {
     text-decoration: none; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .heading-tertiary, .heading-tertiary--alt, .heading-tertiary--alt a, .heading-tertiary a {
       font-size: 3rem; } }
   @media only screen and (max-width: 37.5em) {
@@ -600,13 +603,13 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .u-margin-bottom-big {
       margin-bottom: 5rem !important; } }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .u-margin-bottom-medium {
       margin-bottom: 3rem !important; } }
 
@@ -744,7 +747,7 @@ body {
     z-index: 10;
     transition: all .2s;
     outline-offset: 2rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .composition__photo {
         float: left;
         position: relative;
@@ -753,14 +756,14 @@ body {
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
-      @media only screen and (max-width: 56.25em) {
+      @media only screen and (max-width: 46.88em) {
         .composition__photo--p1 {
           top: 0;
           transform: scale(1.2); } }
     .composition__photo--p2 {
       right: 0;
       top: 2rem; }
-      @media only screen and (max-width: 56.25em) {
+      @media only screen and (max-width: 46.88em) {
         .composition__photo--p2 {
           top: -1rem;
           transform: scale(1.3);
@@ -768,7 +771,7 @@ body {
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
-      @media only screen and (max-width: 56.25em) {
+      @media only screen and (max-width: 46.88em) {
         .composition__photo--p3 {
           top: 1rem;
           left: 0;
@@ -789,7 +792,7 @@ body {
   border-radius: .3rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .feature-box {
       padding: 2rem; } }
   .feature-box__icon {
@@ -799,7 +802,7 @@ body {
     background-image: linear-gradient(to right, #70c2e2, #10536d);
     -webkit-background-clip: text;
     color: transparent; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .feature-box__icon {
         margin-bottom: 0; } }
   .feature-box:hover {
@@ -820,7 +823,7 @@ body {
   border-bottom: .3rem solid transparent;
   width: 90%;
   display: block; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .form__input {
       width: 100%; } }
   .form__input:focus {
@@ -851,7 +854,7 @@ body {
 .form__radio-group {
   width: 49%;
   display: inline-block; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .form__radio-group {
       width: 100%;
       margin-bottom: 2rem; } }
@@ -973,7 +976,7 @@ body {
   padding: 6rem;
   padding-left: 9rem;
   font-size: 1.8rem; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .profile {
       width: 100%;
       padding: 4rem;
@@ -1032,7 +1035,7 @@ body {
   border-radius: 50%;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .circle {
       padding: 2rem; } }
   .circle__img {
@@ -1040,7 +1043,7 @@ body {
     max-width: 100% !important;
     max-height: auto;
     border-radius: inherit; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .circle__img {
         margin-bottom: 0; } }
   .circle:hover {
@@ -1052,13 +1055,13 @@ body {
   padding: 10rem 30rem;
   font-size: 1.8rem;
   color: #f7f7f7; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .footer {
       padding: 8rem 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .footer__logo-box {
         margin-bottom: 6rem; } }
   .footer__logo {
@@ -1068,7 +1071,7 @@ body {
     border-top: 0.1rem solid #777;
     padding-top: 2rem;
     display: inline-block; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .footer__navigation {
         width: 100%;
         text-align: center; } }
@@ -1095,7 +1098,7 @@ body {
     width: 100%;
     float: center;
     text-align: center; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .footer__copyright {
         width: 100%;
         text-align: center;
@@ -1106,14 +1109,14 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .row:not(:last-child) {
         margin-bottom: 6rem; } }
   .row::after {
     content: "";
     display: table;
     clear: both; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .row {
       max-width: 50rem;
       padding: 0 3rem; } }
@@ -1121,11 +1124,11 @@ body {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
-      @media only screen and (max-width: 56.25em) {
+      @media only screen and (max-width: 46.88em) {
         .row [class^="col-"]:not(:last-child) {
           margin-right: 0;
           margin-bottom: 6rem; } }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .row [class^="col-"] {
         width: 100% !important; } }
   .row .col-1-of-2 {
@@ -1160,16 +1163,20 @@ body {
     position: relative; }
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     .header {
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
       height: 95vh; } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
       background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile3.jpg); } }
+  @media only screen and (max-width: 46.88em) {
+    .header {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); } }
   @media only screen and (max-width: 37.5em) {
     .header {
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 1rem;
@@ -1196,6 +1203,12 @@ body {
       display: block; }
     .header__text-box > #currentProfile, .header__text-box #otherProfile, .header__text-box #otherProfile--dev {
       display: inline-block; }
+      @media only screen and (max-width: 46.88em) {
+        .header__text-box > #currentProfile, .header__text-box #otherProfile, .header__text-box #otherProfile--dev {
+          display: block; } }
+      @media only screen and (max-width: 37.5em) {
+        .header__text-box > #currentProfile, .header__text-box #otherProfile, .header__text-box #otherProfile--dev {
+          display: block; } }
 
 #otherProfile {
   transition: all .8s; }
@@ -1224,7 +1237,7 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .navigation__button {
       top: 4rem;
       right: 4rem; } }
@@ -1245,7 +1258,7 @@ body {
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
   .navigation__background--art {
     background-image: radial-gradient(#7f9cec, #2c48e7); }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .navigation__background, .navigation__background--art {
       top: 4.5rem;
       right: 4.5rem; } }
@@ -1340,11 +1353,16 @@ body {
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0 28rem;
-  margin-top: -35vh;
+  margin-top: -30vh;
   margin-bottom: -28vh; }
-  @media only screen and (max-width: 56.25em) {
+  @media only screen and (max-width: 46.88em) {
     .section-about {
-      padding: 20rem 0; } }
+      padding: 25rem 0; }
+      .section-about > .row {
+        max-width: 80rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .section-about {
+      padding: 30rem 0; } }
 
 .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
   padding: 30rem 5rem 20rem;
@@ -1354,34 +1372,49 @@ body {
   margin-bottom: 0rem; }
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
-      -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
-      clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
+      -webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
+      clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
       height: 100%; } }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
-      background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile-cropped.jpg); } }
+      background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/nat-4.jpg); } }
+  @media only screen and (max-width: 46.88em) {
+    .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
+      -webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
+      clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%); } }
   @media only screen and (max-width: 37.5em) {
     .section-portfolio, .section-portfolio--2d, .section-portfolio--web, .section-portfolio--more {
-      -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
+      -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+      clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%); } }
   .section-portfolio--2d {
+    padding: 30rem 5rem 20rem;
+    margin-top: -20rem;
+    margin-bottom: 0rem;
     background-image: linear-gradient(to right bottom, rgba(127, 156, 236, 0.8), rgba(44, 72, 231, 0.8)), url(../img/nat-4.jpg); }
+    @media only screen and (max-width: 46.88em) {
+      .section-portfolio--2d {
+        -webkit-clip-path: polygon(0 3%, 100% 0, 100% 97%, 0 100%);
+        clip-path: polygon(0 3%, 100% 0, 100% 97%, 0 100%); } }
+    @media only screen and (max-width: 37.5em) {
+      .section-portfolio--2d {
+        -webkit-clip-path: polygon(0 2%, 100% 0, 100% 98%, 0 100%);
+        clip-path: polygon(0 2%, 100% 0, 100% 98%, 0 100%); } }
   .section-portfolio--3d {
     position: relative;
     padding: 25rem 1rem 20rem;
     text-align: center;
     margin-top: -20rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .section-portfolio--3d {
         padding: 20rem 0; } }
     .section-portfolio--3d__video {
       margin: 5rem auto; }
   .section-portfolio--web {
     position: relative;
-    padding: 25rem 1rem 20rem;
+    padding: 25rem 1rem 30rem;
     text-align: center;
     margin-top: -20rem; }
-    @media only screen and (max-width: 56.25em) {
+    @media only screen and (max-width: 46.88em) {
       .section-portfolio--web {
         padding: 20rem 0; } }
     .section-portfolio--web__video {
@@ -1390,25 +1423,35 @@ body {
     position: relative;
     padding: 25rem 1rem 20rem;
     text-align: center;
-    margin-top: -20rem; }
-    @media only screen and (max-width: 56.25em) {
+    margin-top: -25rem; }
+    @media only screen and (max-width: 46.88em) {
       .section-portfolio--unity {
-        padding: 20rem 0; } }
+        padding: 25rem 0; } }
     .section-portfolio--unity__video {
       margin: 5rem auto; }
   .section-portfolio--more {
     text-align: center; }
     @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
       .section-portfolio--more {
-        -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
-        clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+        -webkit-clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
         height: 100%; } }
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
       .section-portfolio--more {
-        background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/profile-cropped.jpg); } }
+        background-image: linear-gradient(to right bottom, rgba(112, 194, 226, 0.8), rgba(16, 83, 109, 0.8)), url(../img/nat-4.jpg); } }
+    @media only screen and (max-width: 46.88em) {
+      .section-portfolio--more {
+        -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 15%, 100% 0, 100% 100, 0 100%); } }
     @media only screen and (max-width: 37.5em) {
       .section-portfolio--more {
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); } }
+        -webkit-clip-path: polygon(0 10%, 100% 0, 100% 100, 0 100%);
+        clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%); } }
     .section-portfolio--more-items {
       padding: 0 43%; }
+      @media only screen and (max-width: 46.88em) {
+        .section-portfolio--more-items {
+          padding: 0 30%; } }
+      @media only screen and (max-width: 37.5em) {
+        .section-portfolio--more-items {
+          padding: 0 25%; } }
