--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,11 +1,17 @@
 .section-about {
     background-color: $color-gray-light-1;
     padding: 25rem 0 28rem;
-    margin-top: -35vh;
+    margin-top: -30vh;
     margin-bottom: -28vh;
 
     @include respond (tab-port) {
-        padding: 20rem 0;
+        padding: 25rem 0;
+        & > .row {
+            max-width: 80rem;
+        }
+    }
+    @include respond (phone) {
+        padding: 30rem 0;
     }
 }
 .section-portfolio {
@@ -22,8 +28,8 @@
 
 
     @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-        -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
-        clip-path: polygon(0 25vh, 100% 0, 100% 85%, 0 100%);
+        -webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
         height: 100%;
     }
 
@@ -34,21 +40,38 @@
             to right bottom, 
             rgba($color-primary-light,.8),
             rgba($color-primary-dark,.8)),
-        url(../img/profile-cropped.jpg);
+        url(../img/nat-4.jpg);
     } 
 
+    @include respond(tab-port) {
+        -webkit-clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 15%, 100% 0, 100% 85%, 0 100%);
+    }
+
     @include respond(phone) {
-        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+        clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
     }
 
     &--2d {
         @extend .section-portfolio;
+        padding: 30rem 5rem 20rem;
+        margin-top: -20rem;
+        margin-bottom: 0rem;
         background-image:linear-gradient(
             to right bottom, 
             rgba($color-secondary-light,.8),
             rgba($color-secondary-dark,.8)),
         url(../img/nat-4.jpg);
+
+        @include respond(tab-port) {
+            -webkit-clip-path: polygon(0 3%, 100% 0, 100% 97%, 0 100%);
+            clip-path: polygon(0 3%, 100% 0, 100% 97%, 0 100%);
+        }
+        @include respond(phone) {
+            -webkit-clip-path: polygon(0 2%, 100% 0, 100% 98%, 0 100%);
+            clip-path: polygon(0 2%, 100% 0, 100% 98%, 0 100%);
+        }
     }
     &--3d {
         position: relative;
@@ -66,7 +89,7 @@
     &--web {
         @extend .section-portfolio;
         position: relative;
-        padding: 25rem 1rem 20rem;
+        padding: 25rem 1rem 30rem;
         text-align: center;
         margin-top: -20rem;
 
@@ -81,10 +104,10 @@
         position: relative;
         padding: 25rem 1rem 20rem;
         text-align: center;
-        margin-top: -20rem;
+        margin-top: -25rem;
 
         @include respond (tab-port) {
-            padding: 20rem 0;
+            padding: 25rem 0;
         }
         &__video {
             margin: 5rem auto;
@@ -94,8 +117,8 @@
         @extend .section-portfolio;
         text-align: center;
         @supports(clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-            -webkit-clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
-            clip-path: polygon(0 25vh, 100% 0, 100% 100%, 0 100%);
+            -webkit-clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 25%, 100% 0, 100% 100%, 0 100%);
             height: 100%;
         }
     
@@ -106,15 +129,24 @@
                 to right bottom, 
                 rgba($color-primary-light,.8),
                 rgba($color-primary-dark,.8)),
-            url(../img/profile-cropped.jpg);
+            url(../img/nat-4.jpg);
         } 
-    
+        @include respond (tab-port) {
+            -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 15%, 100% 0, 100% 100, 0 100%);
+        }
         @include respond(phone) {
-            -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+            -webkit-clip-path: polygon(0 10%, 100% 0, 100% 100, 0 100%);
+            clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%);
         }
         &-items {
             padding: 0 43%;
+            @include respond(tab-port) {
+                padding: 0 30%;
+            }
+            @include respond(phone) {
+                padding: 0 25%;
+            }
         }
     }
 }
